--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pycparser==2.20
 pycryptodome==3.10.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 pytypecho==2.0.1
 redis==3.5.3
 regex==2021.4.4
